--- a/app/src/main/res/layout/fragment_positions.xml
+++ b/app/src/main/res/layout/fragment_positions.xml
@@ -7,7 +7,7 @@
     <com.google.android.material.textview.MaterialTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Positions Fragment"
+        android:text="@string/positions_fragment"
         android:textColor="@color/black_shade"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
