--- a/app/src/main/res/menu/menu_portfolio.xml
+++ b/app/src/main/res/menu/menu_portfolio.xml
@@ -4,13 +4,13 @@
     <item
         android:id="@+id/action_search"
         android:icon="@drawable/ic_bottom_portfolio"
-        android:title="Search"
+        android:title="@string/search"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/action_sort"
         android:icon="@drawable/ic_bottom_more"
-        android:title="Sort"
+        android:title="@string/sort"
         app:showAsAction="always" />
 
 </menu>
